--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "part1",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-session": "^1.17.2",
-    "http-errors": "~1.6.3",
-    "mongoose": "^6.2.10",
-    "morgan": "~1.9.1",
-    "sync-request": "^6.1.0"
-  }
+    "name": "weather-app-daily",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.0",
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "ejs": "~2.6.1",
+        "express": "~4.16.1",
+        "express-session": "^1.17.2",
+        "http-errors": "~1.6.3",
+        "mongoose": "^6.2.10",
+        "morgan": "~1.9.1",
+        "sync-request": "^6.1.0"
+    }
 }
